--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio</title>
+	<title> Vikki's Portfolio</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
+/>
 
-	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
+
+	<link rel="icon" type="image/x-icon" href="assets/img/favicon.jpg">
 	<meta name="author" content="Hassan Ali">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -17,19 +20,14 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<a href="https://discord.com/users/1148366861709361274" class="nav-item" target="_blank">
 					<span class="icon">
-						<i class="fa fa-medium"></i>
+						<i class="iconoir-discord"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="https://www.instagram.com/vikkib_101/" class="nav-item" target="_blank">
 					<span class="icon">
-						<i class="fa fa-github"></i>
-					</span>
-				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-twitter"></i>
+						<i class="fa fa-instagram"></i>
 					</span>
 				</a>				
 			</div>
@@ -37,7 +35,7 @@
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
 				<a class="nav-item" href="#projects">Projects</a>
-				<a class="nav-item" href="#social">Social</a>
+				<a class="nav-item" href="#social">Socials</a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -52,36 +50,58 @@
 		<!-- About Me -->
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
-				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
+				<img src="assets/img/Daruma Eyes.png">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+					<div style="font-size: 1.5em;"> Vikki's <strong style="color: #A6101E;">Research x Design</strong> Portfolio </div>
+					<br>
+					Stick around and look through my projects. More than happy to connect as well! Maybe we can find a way to help each other fill in both the eyes of our <i><strong>Darumas</strong></i>.
+					<br>
+					I am a researcher by trade, equipped with the passion of a UX professional towards technology, the empathy of a psychology major for humans, and a love of art in all its forms --particularly for games.
 				</p>
 			</div>
+			<div class="container has-text-centered" width="100%">
+				<img class="avatar" src="assets/img/Daruma Teeth.png">
+			</div>
+			<br><br>
 		</section>
-		
+
+
 		<!-- Projects -->
-		<section  id="projects" class="section section-2">
+		<section  id="projects" class="section section-2" style="margin-top: -230px;">
+			<br><br><br>
 			<div class="container">
 				<div class="has-text-centered">
-					<h3 class="title is-3">Projects</h3>
+					<h3 class="title is-3" style="font-size: 2em; color: #A6101E; font-weight: bold" >
+						Projects
+					</h3>
 				</div>
-				
+				<div class="has-text-centered" style="color: white; text-align: justify;">
+					Below is a list of UX-related projects I've worked on, both in the context of video games and more mainstream insdutries --such as finance and publishing. 
+					<br><br>
+					I can talk about any of these in more depth, should you be interested, so if there’s anything you’d like to pick my brain on, feel free to reach out through my contacts at the bottom of the page.
+					<br><br>
+				</div>
 				<div class="columns is-multiline is-desktop">
 					<!-- Project 1 -->
 					<div class="column">
 						<div class="box project-text">
 							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									RESEARCH
+								</div>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/project-1.jpg" alt="Image">
+										<img src="assets/img/UXresearch.png" alt="Image">
 									</figure>
 								</div>
 								<div>			
+									<a href="https://clean-watch-146.notion.site/Early-Work-as-a-Mainstream-UX-Researcher-9c9b5f27f04c45818796d449e7196282?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
+										Early Work as a [Mainstream] UX Researcher
+									</a>	
 									<p>
-										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+										A collection of specific projects outlining my fiery welcome into the practice of UX research, how I got more involved in the community, and an example of how I help progress within my teams.  
 									</p>
 								</div>
 							</article>
@@ -91,14 +111,185 @@
 					<div class="column">
 						<div class="box project-text">
 							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									RESEARCH
+								</div>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/project-2.jpg" alt="Image">
+										<img src="assets/img/documentation.png" alt="Image">
 									</figure>
 								</div>
 								<div>			
+									<a href="https://clean-watch-146.notion.site/A-Few-Sample-Research-Documents-20b6ab9862cc40688ac9bfc3ff7918a3?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
+										A Few Sample Research Documents
+									</a>	
 									<p>
-										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
+										A collection of written artifacts that I can show as examples to illustrate the kind of documentation that I usually cover at different points of any end-to-end research project.<br><br>
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+				</div>
+				<div class="columns is-multiline is-desktop">
+					<!-- Project 3 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									GAME DESIGN
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/absolver.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://clean-watch-146.notion.site/My-Approach-to-Design-Challenges-54f77c08e4da4d388baf4d2219b8c70d?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
+										Case Study of Absolver (by Sloclap)
+									</a>	
+									<p>
+										This is a close examination of one of the games I really like. This case study shows my process for looking at deisgn challenges and how to solve them. <br><br>
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<!-- Project 4 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									GAME DESIGN
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/softwar.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://clean-watch-146.notion.site/What-s-Better-than-Written-Reports-a218c9fa03604d82a6d824432cec86bd?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
+										A Heuristic Review for Softwar (by Raseruuu)
+									</a>	
+									<p>
+										An example of an indie game I volunteered to review to help improve its overall usability. Here we talk about the best appraoch for sharing insights (and it's not a written report). 
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<!-- Project 5 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									GAME DESIGN
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/Figma.jpg" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://clean-watch-146.notion.site/Learning-by-Tracing-in-Figma-ac21b284fe794223b338ea1408b75bca?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
+										Tracing Exercises to Analyze Designs
+									</a>	
+									<p>
+										A colleague once taught me that Design is a skill you learn in practice, not in theory. Here are a couple of examples for how I tried to expand my design skills by using Figma. 
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+				</div>
+				<div class="columns is-multiline is-desktop">
+					<!-- Project 6 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									GAME PRODUCTION
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/LaD.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://youtu.be/5ffyhIZ2-HI" style="font-weight: bold; color: #A6101E" target="_blank">
+										Life and Death (watch trailer)
+									</a>	
+									<p>
+										A 2-player co-op game where players build the world as Life and Death, while protectimg it from the Invasive Species that try to corrupt it. This was a Level Up 2024 submission. 
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<!-- Project 7 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									GAME PRODUCTION
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/baladi.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://youtu.be/oP5yNilL81g" style="font-weight: bold; color: #A6101E" target="_blank">
+										Baladi (watch trailer)
+									</a>	
+									<p>
+										An action RPG where players have to dance their way to the rhythm and defeat enemies in magial belly dancing performances. This was another Level Up 2024 submission.
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<!-- Project 8 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									GAME PRODUCTION
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/davidgreen.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://ejm3n.itch.io/david-green-amateur-ghost-hunter" style="font-weight: bold; color: #A6101E" target="_blank">
+										David Green (play in itch.io)
+									</a>	
+									<p>
+										A submission for TO Jam 2024, a 3-day game jam hosted in George Brown College. This is a 1-player, casual, horror game where players exorcise a ghost in a slaughter house. 
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+					<!-- Project 9 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									GAME PRODUCTION
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/greedisland.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://yes.schoolofdesign.ca/work" style="font-weight: bold; color: #A6101E" target="_blank">
+										Greed Island Boardgame<br>(view web showcase) 
+									</a>	
+									<p>
+										A graded assignment during my post-graduate course, inspired from a Shōnen Jump anime. It brings to life a world in the series of the same name.
 									</p>
 								</div>
 							</article>
@@ -112,23 +303,43 @@
 		<section id="social" class="section section-3">
 			<div class="container">
 				<div class="has-text-centered">					
-					<h3 class="title is-3">Let's Socialize</h3>
+					<h3 class="title is-3" style="color: black;">
+						Let's Connect
+					</h3>
 				</div>
+				<div class="container has-text-centered">
+					<img class="avatar has-text-centered" src="assets/img/profile.jpg">
+				</div>
+				<br><br><br>
 				<div class="social-container columns">
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
+					<div class="column has-text-centered">
+						<a target="_blank" href="https://www.linkedin.com/in/mariah-victoria-baysic-8088b673/"><img class="" src="assets/img/linkedin.png" width="50px" height="50px"></a>
 					</div>
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
+					<div class="column has-text-centered">
+						<a target="_blank" href="mailto:victoria.baysic@gmail.com"><img class="" src="assets/img/Gmail_icon.png" width="50px" height="50px"></a>
+					</div>
+					<div class="column has-text-centered">
+						<a target="_blank" href="https://www.instagram.com/vikkib_101/"><img class="" src="assets/img/instagram icon.png" width="50px" height="50px"></a>
+					</div>
+					<div class="column has-text-centered">
+						<a target="_blank" href="https://discord.com/users/1148366861709361274"><img class="" src="assets/img/discord.png" width="50px" height="50px"></a>
 					</div>
 				</div>
 			</div>
 		</section>	
 		
 		<!-- Footer -->
-		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+		<section class="section-4 has-text-centered container" style="font-size: small; background-image: url(./assets/img/leaves.png)">
+			<a href="https://www.facebook.com/UbasanGG" target="_blank">
+				Vikki Baysic
+				<br>
+				Also a proud member of the Ubasan Gaming Guild (click here to learn more)				
+			</a>
+			<div class="container has-text-centered" width="100%">
+				<img class="avatar" src="assets/img/ubas trans.png">
+			</div>
 		</section>
+		
 		
 		<!-- Scripts  -->
 		<script src="controller.js"></script>		
