Reorganized content, updated favicon, synopsis and other text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 />
 
 
-	<link rel="icon" type="image/x-icon" href="assets/img/favicon.jpg">
+	<link rel="icon" type="image/x-icon" href="assets/img/favicon-32x32.png">
 	<meta name="author" content="Hassan Ali">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -74,13 +74,11 @@
 			<div class="container">
 				<div class="has-text-centered">
 					<h3 class="title is-3" style="font-size: 2em; color: #A6101E; font-weight: bold" >
-						Projects
+						Research Projects
 					</h3>
 				</div>
 				<div class="has-text-centered" style="color: white; text-align: justify;">
-					Below is a list of UX-related projects I've worked on, both in the context of video games and more mainstream insdutries --such as finance and publishing. 
-					<br><br>
-					I can talk about any of these in more depth, should you be interested, so if there’s anything you’d like to pick my brain on, feel free to reach out through my contacts at the bottom of the page.
+					Below is a list of projects I've worked on, both in the context of video games and more mainstream industries --such as finance, publishing, and technology. We can talk about any of these more in length, should you be interested. If there’s anything you’d like to pick my brain on too, feel free to reach out using my contacts at the bottom of the page.
 					<br><br>
 				</div>
 				<div class="columns is-multiline is-desktop">
@@ -89,7 +87,7 @@
 						<div class="box project-text">
 							<article>
 								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									RESEARCH
+									USER EXPERIENCE (UX) RESEARCH
 								</div>
 								<div>
 									<figure class="image project-figure">
@@ -101,43 +99,18 @@
 										Early Work as a [Mainstream] UX Researcher
 									</a>	
 									<p>
-										A collection of specific projects outlining my fiery welcome into the practice of UX research, how I got more involved in the community, and an example of how I help progress within my teams.  
+										Using different methodologies such as usability testing, unconventional presentation formats, and workshop facilitation techniques to engage different audiences and fulfill various goals.
 									</p>
 								</div>
 							</article>
 						</div>
 					</div>
-					<!-- Project 2 -->
-					<div class="column">
-						<div class="box project-text">
-							<article>
-								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									RESEARCH
-								</div>
-								<div>
-									<figure class="image project-figure">
-										<img src="assets/img/documentation.png" alt="Image">
-									</figure>
-								</div>
-								<div>			
-									<a href="https://clean-watch-146.notion.site/A-Few-Sample-Research-Documents-20b6ab9862cc40688ac9bfc3ff7918a3?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
-										A Few Sample Research Documents
-									</a>	
-									<p>
-										A collection of written artifacts that I can show as examples to illustrate the kind of documentation that I usually cover at different points of any end-to-end research project.<br><br>
-									</p>
-								</div>
-							</article>
-						</div>
-					</div>
-				</div>
-				<div class="columns is-multiline is-desktop">
 					<!-- Project 3 -->
 					<div class="column">
 						<div class="box project-text">
 							<article>
 								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									GAME DESIGN
+									USER RESEARCH AND GAME DESIGN
 								</div>
 								<div>
 									<figure class="image project-figure">
@@ -149,18 +122,20 @@
 										Case Study of Absolver (by Sloclap)
 									</a>	
 									<p>
-										This is a close examination of one of the games I really like. This case study shows my process for looking at deisgn challenges and how to solve them. <br><br>
+										Using a case study of a game, you may find my process for identifying problems to solve and framing them into design challenges. This is one way I found to make insights more actionable for design teams.
 									</p>
 								</div>
 							</article>
 						</div>
 					</div>
+				</div>
+				<div class="columns is-multiline is-desktop">
 					<!-- Project 4 -->
 					<div class="column">
 						<div class="box project-text">
 							<article>
 								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									GAME DESIGN
+									USER RESEARCH AND GAME DESIGN
 								</div>
 								<div>
 									<figure class="image project-figure">
@@ -172,12 +147,49 @@
 										A Heuristic Review for Softwar (by Raseruuu)
 									</a>	
 									<p>
-										An example of an indie game I volunteered to review to help improve its overall usability. Here we talk about the best appraoch for sharing insights (and it's not a written report). 
+										Practicing a more collaborative approach to insight sharing with indie developers. This makes the knowledge transfer faster, more efficient, and less prone to the risk of losing things in translation.
 									</p>
 								</div>
 							</article>
 						</div>
 					</div>
+					<!-- Project 2 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
+									USER EXPERIENCE (UX) RESEARCH
+								</div>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/documentation.png" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="https://clean-watch-146.notion.site/A-Few-Sample-Research-Documents-20b6ab9862cc40688ac9bfc3ff7918a3?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
+										A Few Sample Research Documents
+									</a>	
+									<p>
+										Showing how documentation practices may be personalized at different points of the research process, especially during the insight sharing stage, in order to engage readers more. Both written reports and interactive tools have their audiences.
+									</p>
+								</div>
+							</article>
+						</div>
+					</div>
+				</div>
+				<br><br>
+				<div class="columns is-multiline is-desktop">
+					<div class="has-text-centered">
+						<h3 class="title is-3" style="font-size: 2em; color: #A6101E; font-weight: bold" >
+							Game Design Projects
+						</h3>
+					</div>
+					<div class="has-text-centered" style="color: white; text-align: justify;">
+						With the end goal of serving the video game community in mind, I take the extra mile to contribute to game development teams by learning more about the process of making games. This means getting involved in the art and practice of developing/producing them in different tools and platforms --using Unity or Unreal for PC, consoles, or web, and even tabletop.    
+						<br><br>
+					</div>
+				</div>
+				<div class="columns is-multiline is-desktop">
 					<!-- Project 5 -->
 					<div class="column">
 						<div class="box project-text">
@@ -192,23 +204,21 @@
 								</div>
 								<div>			
 									<a href="https://clean-watch-146.notion.site/Learning-by-Tracing-in-Figma-ac21b284fe794223b338ea1408b75bca?pvs=4" style="font-weight: bold; color: #A6101E" target="_blank">
-										Tracing Exercises to Analyze Designs
+										Tracing Exercises to Learn the Design Process
 									</a>	
 									<p>
-										A colleague once taught me that Design is a skill you learn in practice, not in theory. Here are a couple of examples for how I tried to expand my design skills by using Figma. 
+										Challenging myself to use Figma in more complicated ways in order to be able to take advantage of it as a visualization tool.
 									</p>
 								</div>
 							</article>
 						</div>
 					</div>
-				</div>
-				<div class="columns is-multiline is-desktop">
 					<!-- Project 6 -->
 					<div class="column">
 						<div class="box project-text">
 							<article>
 								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									GAME PRODUCTION
+									GAME DESIGN & PRODUCTION
 								</div>
 								<div>
 									<figure class="image project-figure">
@@ -217,7 +227,7 @@
 								</div>
 								<div>			
 									<a href="https://youtu.be/5ffyhIZ2-HI" style="font-weight: bold; color: #A6101E" target="_blank">
-										Life and Death (watch trailer)
+										Life and Death <br>(watch trailer)
 									</a>	
 									<p>
 										A 2-player co-op game where players build the world as Life and Death, while protectimg it from the Invasive Species that try to corrupt it. This was a Level Up 2024 submission. 
@@ -231,7 +241,7 @@
 						<div class="box project-text">
 							<article>
 								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									GAME PRODUCTION
+									GAME DESIGN & PRODUCTION
 								</div>
 								<div>
 									<figure class="image project-figure">
@@ -254,7 +264,7 @@
 						<div class="box project-text">
 							<article>
 								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									GAME PRODUCTION
+									GAME DESIGN & PRODUCTION
 								</div>
 								<div>
 									<figure class="image project-figure">
@@ -263,7 +273,7 @@
 								</div>
 								<div>			
 									<a href="https://ejm3n.itch.io/david-green-amateur-ghost-hunter" style="font-weight: bold; color: #A6101E" target="_blank">
-										David Green (play in itch.io)
+										David Green <br> (play in itch.io)
 									</a>	
 									<p>
 										A submission for TO Jam 2024, a 3-day game jam hosted in George Brown College. This is a 1-player, casual, horror game where players exorcise a ghost in a slaughter house. 
@@ -277,7 +287,7 @@
 						<div class="box project-text">
 							<article>
 								<div class="container" style="font-weight: bold; color: #A6101E; font-size: x-small; margin-bottom: 5px;">
-									GAME PRODUCTION
+									GAME DESIGN & PRODUCTION
 								</div>
 								<div>
 									<figure class="image project-figure">
@@ -333,7 +343,7 @@
 			<a href="https://www.facebook.com/UbasanGG" target="_blank">
 				Vikki Baysic
 				<br>
-				Also a proud member of the Ubasan Gaming Guild (click here to learn more)				
+				Also a proud member of the Ubasan Gaming Guild <br> (click here to learn more)				
 			</a>
 			<div class="container has-text-centered" width="100%">
 				<img class="avatar" src="assets/img/ubas trans.png">
