--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						</h3>
 					</div>
 					<div class="has-text-centered" style="color: white; text-align: justify;">
-						With the end goal of serving the video game community in mind, I take the extra mile to contribute to game development teams by learning more about the process of making games. This means getting involved in the art and practice of developing/producing them in different tools and platforms --using Unity or Unreal for PC, consoles, or web, and even tabletop.    
+						With the end goal of serving the video game community in mind, I take the extra mile in contributing to game development teams and learning more about the process of making games. This means getting involved in the art and practice of designing and producing them while using different tools and platforms --Unity or Unreal for PC, consoles, or web, and even tabletop.    
 						<br><br>
 					</div>
 				</div>
